--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
 </div>
 </head>
 <body>
+
+<!-- Модальне вікно -->
+<div id="welcomeModal" class="modal hidden">
+    <div class="modal-content">
+        <span class="close-btn">&times;</span>
+        <h2 id="modalTitle"></h2>
+        <p id="modalDescription"></p>
+    </div>
+</div>
+
+
     <!-- 1ша секція -->
     <div class="container">
         <div class="text-container">
@@ -55,7 +66,8 @@
             <div class="paragraph">Your journey to finding the perfect property begins here. Explore our listings to find the home that matches your dreams.</div>
             <div class="buttons-container">
                 <div class="button learn-more">Learn More</div>
-                <div class="button browse-properties">Browse Properties</div>
+                <a href="404.html" class="button browse-properties">Browse Properties</a>
+
             </div>
             <div class="stats">
                 <div class="stat-card">
@@ -105,6 +117,9 @@
     <div class="container6">
         <div class="header6">
             <div class="text-container6">
+                <div class="abstract-design">
+                    <img src="img/Shine.png" alt="Abstract Design" class="frame" width="68.4" height="30">
+                </div>
                 <div class="heading6">Featured Properties</div>
                 <div class="paragraph6">Explore our handpicked selection of featured properties. Each listing offers a glimpse into exceptional homes and investments available through Estatein. Click "View Details" for more information.</div>
             </div>
@@ -171,6 +186,9 @@
     <div class="container2">
         <div class="header">
             <div class="text-container">
+                <div class="abstract-design">
+                    <img src="img/Shine.png" alt="Abstract Design" class="frame" width="68.4" height="30">
+                </div>
                 <div class="heading2">What Our Clients Say</div>
                 <div class="paragraph2">Read the success stories and heartfelt testimonials from our valued clients. Discover why they chose Estatein for their real estate needs.</div>
             </div>
@@ -254,6 +272,9 @@
     <div class="container3">
         <div class="header3">
             <div class="text-container3">
+                <div class="abstract-design">
+                    <img src="img/Shine.png" alt="Abstract Design" class="frame" width="68.4" height="30">
+                </div>
                 <div class="heading3">Frequently Asked Questions</div>
                 <div class="paragraph3">Find answers to common questions about Estatein's services, property listings, and the real estate process. We're here to provide clarity and assist you every step of the way.</div>
             </div>
@@ -298,6 +319,7 @@
         <button class="cta-button">Explore Properties</button>
         <div class="abstract-design-right4"></div>
     </div>
+    <script src="js/main.js"></script>
 </body>
 <footer>
     <!--Footer-->
@@ -366,6 +388,6 @@
         </div>
     </div>
 </footer>
-<script src="js/main.js"></script>
+
 </html>
 
