--- a/about.html
+++ b/about.html
@@ -75,6 +75,9 @@
 <!--2га секція-->
 <div class="container_About_2">
     <div class="text-container_About_2">
+        <div class="abstract-design">
+            <img src="img/Shine.png" alt="Abstract Design" class="frame" width="68.4" height="30">
+        </div>
         <div class="heading_About_2">Our Values</div>
         <div class="paragraph_About_2">Our story is one of continuous growth and evolution. We started as a small team with big dreams, determined to create a real estate platform that transcended the ordinary.</div>
     </div>
@@ -125,6 +128,9 @@
 <!--3тя секція-->
 <div class="container_About_6">
     <div class="text-container_About_6">
+        <div class="abstract-design">
+            <img src="img/Shine.png" alt="Abstract Design" class="frame" width="68.4" height="30">
+        </div>
         <div class="heading_About_6">Our Achievements</div>
         <div class="paragraph_About_6">Our story is one of continuous growth and evolution. We started as a small team with big dreams, determined to create a real estate platform that transcended the ordinary.</div>
     </div>
@@ -146,6 +152,9 @@
 <!--4та секція-->
 <div class="container_About_4">
     <div class="text-container_About_4">
+        <div class="abstract-design">
+            <img src="img/Shine.png" alt="Abstract Design" class="frame" width="68.4" height="30">
+        </div>
         <div class="heading_About_4">Navigating the Estatein Experience</div>
         <div class="paragraph_About_4">At Estatein, we've designed a straightforward process to help you find and purchase your dream property with ease. Here's a step-by-step guide to how it all works.</div>
     </div>
@@ -197,6 +206,9 @@
 <!--5та секція-->
 <div class="container_About_6">
     <div class="text-container_About_6">
+        <div class="abstract-design">
+            <img src="img/Shine.png" alt="Abstract Design" class="frame" width="68.4" height="30">
+        </div>
         <div class="heading_About_6">Meet the Estatein Team</div>
         <div class="paragraph_About_6">At Estatein, our success is driven by the dedication and expertise of our team. Get to know the people behind our mission to make your real estate dreams a reality.</div>
     </div>
@@ -266,6 +278,9 @@
 <!--6та секція-->
 <div class="container_About_6">
     <div class="text-container_About_6">
+        <div class="abstract-design">
+            <img src="img/Shine.png" alt="Abstract Design" class="frame" width="68.4" height="30">
+        </div>
         <div class="heading_About_6">Our Valued Clients</div>
         <div class="paragraph_About_6">At Estatein, we have had the privilege of working with a diverse range of clients across various industries. Here are some of the clients we've had the pleasure of serving</div>
     </div>
