--- a/properties.html
+++ b/properties.html
@@ -7,6 +7,9 @@
     <title>Estatein - Discover Your Dream Property</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" type="image/png" href="favicon/favicon.png">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
 </head>
 <header class="banner">
     <div class="abstract-design"></div>
@@ -59,57 +62,59 @@
         <div class="search-bar">
             <input type="text" placeholder="Search For A Property">
             <button>
-                <img src="https://placeholder.pics/svg/24x24" alt="Search Icon" width="24" height="24">
+                <img src="img/Find.png" alt="Search Icon" width="24" height="24">
                 <span class="search-button-text">Find Property</span>
             </button>
         </div>
     </div>
     <div class="filter-options">
         <div class="filter-item">
-            <img src="https://placeholder.pics/svg/24x24" alt="Location">
+            <img src="img/Location.png" alt="Location">
             <span>Location</span>
             <div class="filter-button">
-                <img src="https://placeholder.pics/svg/24x24" alt="Dropdown">
+                <img src="img/down_arrow.png" alt="Dropdown">
             </div>
         </div>
         <div class="filter-item">
-            <img src="https://placeholder.pics/svg/24x24" alt="Property Type">
+            <img src="img/Phroperty_type.png" alt="Property Type">
             <span>Property Type</span>
             <div class="filter-button">
-                <img src="https://placeholder.pics/svg/24x24" alt="Dropdown">
+                <img src="img/down_arrow.png" alt="Dropdown">
             </div>
         </div>
         <div class="filter-item">
-            <img src="https://placeholder.pics/svg/24x24" alt="Pricing Range">
+            <img src="img/PricingR.png" alt="Pricing Range">
             <span>Pricing Range</span>
             <div class="filter-button">
-                <img src="https://placeholder.pics/svg/24x24" alt="Dropdown">
+                <img src="img/down_arrow.png" alt="Dropdown">
             </div>
         </div>
         <div class="filter-item">
-            <img src="https://placeholder.pics/svg/24x24" alt="Property Size">
+            <img src="img/Size.png" alt="Property Size">
             <span>Property Size</span>
             <div class="filter-button">
-                <img src="https://placeholder.pics/svg/24x24" alt="Dropdown">
+                <img src="img/down_arrow.png" alt="Dropdown">
             </div>
         </div>
         <div class="filter-item">
-            <img src="https://placeholder.pics/svg/24x24" alt="Build Year">
+            <img src="img/Year.png" alt="Build Year">
             <span>Build Year</span>
             <div class="filter-button">
-                <img src="https://placeholder.pics/svg/24x24" alt="Dropdown">
+                <img src="img/down_arrow.png" alt="Dropdown">
             </div>
         </div>
     </div>
     <!--2 container-->
     <div class="header_properties_2">
+        <div class="abstract-design">
+            <img src="img/Shine.png" alt="Abstract Design" class="frame" width="68.4" height="30">
+        </div>
         <div class="header-title">Discover a World of Possibilities</div>
         <div class="header-subtitle">Our portfolio of properties is as diverse as your dreams. Explore the following categories to find the perfect property that resonates with your vision of home.</div>
     </div>
-
     <div class="property-grid">
         <div class="property-card">
-            <img src="https://placeholder.pics/svg/432x318" alt="Property Image 1">
+            <img src="img/Villa.svg" alt="Property Image 1">
             <div class="property-info">
                 <div class="property-tag">Coastal Escapes - Where Waves Beckon</div>
                 <div>
@@ -128,7 +133,7 @@
             </div>
         </div>
         <div class="property-card">
-            <img src="https://placeholder.pics/svg/432x318" alt="Property Image 2">
+            <img src="img/Haven.svg" alt="Property Image 2">
             <div class="property-info">
                 <div class="property-tag">Urban Oasis - Life in the Heart of the City</div>
                 <div>
@@ -147,7 +152,7 @@
             </div>
         </div>
         <div class="property-card">
-            <img src="https://placeholder.pics/svg/432x318" alt="Property Image 3">
+            <img src="img/Cottage.svg" alt="Property Image 3">
             <div class="property-info">
                 <div class="property-tag">Countryside Charm - Escape to Nature's Embrace</div>
                 <div>
@@ -171,18 +176,102 @@
         <div class="page-info">01 of 10</div>
         <div class="nav-buttons">
             <div class="nav-button">
-                <img src="https://placeholder.pics/svg/30x30" alt="Previous">
+                <img src="img/Button_Left.svg" alt="Previous">
             </div>
             <div class="nav-button">
-                <img src="https://placeholder.pics/svg/30x30" alt="Next">
+                <img src="img/Button_Right.svg" alt="Next">
             </div>
         </div>
     </div>
+
+
+    <!-- Swiper-контейнер -->
+<div class="swiper-container">
+    <div class="swiper-wrapper">
+    <!-- Слайд 1 -->
+    <div class="swiper-slide">
+        <div class="property-card">
+        <img src="img/Villa.svg" alt="Property Image 1">
+        <div class="property-info">
+            <div class="property-tag">Coastal Escapes - Where Waves Beckon</div>
+            <div>
+            <div class="property-title">Seaside Serenity Villa</div>
+            <div class="property-description">
+                Wake up to the soothing melody of waves. This beachfront villa offers... 
+                <a href="#" style="color: #bbbbbb;">Read More</a>
+            </div>
+            </div>
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+            <div>
+                <div class="property-price">Price</div>
+                <div class="price-number">$1,250,000</div>
+            </div>
+            <button class="view-details-button">View Property Details</button>
+            </div>
+        </div>
+        </div>
+    </div>
+    <!-- Слайд 2 -->
+    <div class="swiper-slide">
+        <div class="property-card">
+        <img src="img/Haven.svg" alt="Property Image 2">
+        <div class="property-info">
+            <div class="property-tag">Urban Oasis - Life in the Heart of the City</div>
+            <div>
+            <div class="property-title">Metropolitan Haven</div>
+            <div class="property-description">
+                Immerse yourself in the energy of the city. This modern apartment in the heart... 
+                <a href="#" style="color: #bbbbbb;">Read More</a>
+            </div>
+            </div>
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+            <div>
+                <div class="property-price">Price</div>
+                <div class="price-number">$650,000</div>
+            </div>
+            <button class="view-details-button">View Property Details</button>
+            </div>
+        </div>
+        </div>
+    </div>
+    <!-- Слайд 3 -->
+    <div class="swiper-slide">
+        <div class="property-card">
+        <img src="img/Cottage.svg" alt="Property Image 3">
+        <div class="property-info">
+            <div class="property-tag">Countryside Charm - Escape to Nature's Embrace</div>
+            <div>
+            <div class="property-title">Rustic Retreat Cottage</div>
+            <div class="property-description">
+                Find tranquility in the countryside. This charming cottage is nestled amidst rolling hills... 
+                <a href="#" style="color: #bbbbbb;">Read More</a>
+            </div>
+            </div>
+            <div style="display: flex; justify-content: space-between; align-items: center;">
+            <div>
+                <div class="property-price">Price</div>
+                <div class="price-number">$350,000</div>
+            </div>
+            <button class="view-details-button">View Property Details</button>
+            </div>
+        </div>
+        </div>
+    </div>
+    </div>
+
+    <!-- Навігаційні кнопки -->
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+
+    <!-- Пагінація -->
+    <div class="swiper-pagination"></div>
+</div>
+
     <!-- 3 container-->
     <!-- TextContainer Component -->
     <div class="text-container">
         <div class="abstract-design">
-            <img src="https://placeholder.pics/svg/68.4x30" alt="Abstract Design" class="frame" width="68.4" height="30">
+            <img src="img/Shine.png" alt="Abstract Design" class="frame" width="68.4" height="30">
         </div>
         <div class="heading">Let's Make it Happen</div>
         <div class="paragraph">
@@ -191,6 +280,7 @@
     </div>
 
     <!-- FormElements Component -->
+    
     <div class="form-container">
         <div class="form-group">
             <label for="firstName">First Name</label>
@@ -248,7 +338,7 @@
                 </select>
             </div>
         </div>
-        <div class="form-group">
+        <div class="form-group budget">
             <label for="budget">Budget</label>
             <div class="input-field">
                 <select id="budget">
@@ -258,20 +348,14 @@
         </div>
         <div class="form-group">
             <label>Preferred Contact Method</label>
-            <div class="contact-methods">
-                <div class="input-field">
-                    <input type="tel" placeholder="Enter Your Number">
-                    <span class="radio"></span>
-                </div>
+            <div class="input-field">
+                <input type="tel" placeholder="Enter Your Number">
             </div>
         </div>
         <div class="form-group">
             <label>Preferred Contact Method</label>
-            <div class="contact-methods">
-                <div class="input-field">
-                    <input type="email" placeholder="Enter Your Email">
-                    <span class="radio"></span>
-                </div>
+            <div class="input-field">
+                <input type="email" placeholder="Enter Your Email">
             </div>
         </div>
         <div class="form-group message">
@@ -281,18 +365,15 @@
             </div>
         </div>
     </div>
-
-    <!-- CheckboxAndButtonContainer Component -->
     <div class="checkbox-and-button-container">
         <div class="checkbox-with-label">
-            <div class="checkbox-shape"></div>
-            <span class="checkbox-label">I agree with Terms of Use and Privacy Policy</span>
+            <input type="checkbox" id="agree">
+            <label for="agree">I agree with Terms of Use and Privacy Policy</label>
         </div>
         <button class="send-message-button">Send Your Message</button>
     </div>
     
 </body>
-<footer>
     <!-- 4ша секція до футера -->
     <div class="cta-container">
         <div class="abstract-design-left4"></div>
@@ -303,72 +384,73 @@
         <button class="cta-button">Explore Properties</button>
         <div class="abstract-design-right4"></div>
     </div>
-    <!--Footer-->
-    <div class="footer">
-        <div class="footer-content">
-            <div class="footer-column">
-                <div class="logo"></div>
-                <div class="input-field">
-                    <img src="img/mail.svg" alt="icon">
-                    <span class="email-field">Enter Your Email</span>
-                    <img src="img/send.svg" alt="send">
+    <footer>
+        <!--Footer-->
+        <div class="footer">
+            <div class="footer-content">
+                <div class="footer-column">
+                    <div class="logo"></div>
+                    <div class="input-field">
+                        <img src="img/mail.svg" alt="icon">
+                        <span class="email-field">Enter Your Email</span>
+                        <img src="img/send.svg" alt="send">
+                    </div>
+                </div>
+                <div class="footer-column">
+                    <div class="footer-link-title">Home</div>
+                    <div class="footer-link">Hero Section</div>
+                    <div class="footer-link">Features</div>
+                    <div class="footer-link">Properties</div>
+                    <div class="footer-link">Testimonials</div>
+                    <div class="footer-link">FAQ’s</div>
+                </div>
+                <div class="footer-column">
+                    <div class="footer-link-title">About Us</div>
+                    <div class="footer-link">Our Story</div>
+                    <div class="footer-link">Our Works</div>
+                    <div class="footer-link">How It Works</div>
+                    <div class="footer-link">Our Team</div>
+                    <div class="footer-link">Our Clients</div>
+                </div>
+                <div class="footer-column">
+                    <div class="footer-link-title">Properties</div>
+                    <div class="footer-link">Portfolio</div>
+                    <div class="footer-link">Categories</div>
+                </div>
+                <div class="footer-column">
+                    <div class="footer-link-title">Services</div>
+                    <div class="footer-link">Valuation Mastery</div>
+                    <div class="footer-link">Strategic Marketing</div>
+                    <div class="footer-link">Negotiation Wizardry</div>
+                    <div class="footer-link">Closing Success</div>
+                    <div class="footer-link">Property Management</div>
+                </div>
+                <div class="footer-column">
+                    <div class="footer-link-title">Contact Us</div>
+                    <div class="footer-link">Contact Form</div>
+                    <div class="footer-link">Our Offices</div>
                 </div>
             </div>
-            <div class="footer-column">
-                <div class="footer-link-title">Home</div>
-                <div class="footer-link">Hero Section</div>
-                <div class="footer-link">Features</div>
-                <div class="footer-link">Properties</div>
-                <div class="footer-link">Testimonials</div>
-                <div class="footer-link">FAQ’s</div>
-            </div>
-            <div class="footer-column">
-                <div class="footer-link-title">About Us</div>
-                <div class="footer-link">Our Story</div>
-                <div class="footer-link">Our Works</div>
-                <div class="footer-link">How It Works</div>
-                <div class="footer-link">Our Team</div>
-                <div class="footer-link">Our Clients</div>
-            </div>
-            <div class="footer-column">
-                <div class="footer-link-title">Properties</div>
-                <div class="footer-link">Portfolio</div>
-                <div class="footer-link">Categories</div>
-            </div>
-            <div class="footer-column">
-                <div class="footer-link-title">Services</div>
-                <div class="footer-link">Valuation Mastery</div>
-                <div class="footer-link">Strategic Marketing</div>
-                <div class="footer-link">Negotiation Wizardry</div>
-                <div class="footer-link">Closing Success</div>
-                <div class="footer-link">Property Management</div>
-            </div>
-            <div class="footer-column">
-                <div class="footer-link-title">Contact Us</div>
-                <div class="footer-link">Contact Form</div>
-                <div class="footer-link">Our Offices</div>
+            <div class="footer-bottom">
+                <div class="link">@2023 Estatein. All Rights Reserved.</div>
+                <div class="link">Terms & Conditions</div>
+                <div class="social-icons">
+                    <div class="social-icon">
+                        <img src="img/face.svg" alt="social icon 1">
+                    </div>
+                    <div class="social-icon">
+                        <img src="img/in.svg" alt="social icon 2">
+                    </div>
+                    <div class="social-icon">
+                        <img src="img/tviw.svg" alt="social icon 3">
+                    </div>
+                    <div class="social-icon">
+                        <img src="img/you.svg" alt="social icon 4">
+                    </div>
+                </div>
             </div>
         </div>
-        <div class="footer-bottom">
-            <div class="link">@2023 Estatein. All Rights Reserved.</div>
-            <div class="link">Terms & Conditions</div>
-            <div class="social-icons">
-                <div class="social-icon">
-                    <img src="img/face.svg" alt="social icon 1">
-                </div>
-                <div class="social-icon">
-                    <img src="img/in.svg" alt="social icon 2">
-                </div>
-                <div class="social-icon">
-                    <img src="img/tviw.svg" alt="social icon 3">
-                </div>
-                <div class="social-icon">
-                    <img src="img/you.svg" alt="social icon 4">
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
+    </footer>
 <script src="js/main.js"></script>
 </html>
 
